k8s/agents.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-agent
  namespace: drone
  labels:
    app: drone-agent
spec:
  replicas: 5
  selector:
    matchLabels:
      app: drone-agent
  template:
    metadata:
      labels:
        app: drone-agent
    spec:
      containers:
      - name: drone
        image: drone/agent:0.8.1
        ports:
        - containerPort: 8000
        - containerPort: 9000
        volumeMounts:
        - mountPath: /var/run/docker.sock
          name: docker-socket
      volumes:
      - name: docker-socket
        hostPath:
          path: /var/run/docker.sock
